Fix spacing and add signatures

--- a/Arai_scrapbook/TEIBP/src/css/custom.css
+++ b/Arai_scrapbook/TEIBP/src/css/custom.css
@@ -1,3 +1,3 @@
 body div {
-    margin: 100px;
+    margin-bottom: 100px;
 }
